add webp thumbnail support
